src/test/deca/syntax/valid/synt/While.deca
// Description:
//    Programme boucle while
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    while (true){
        "tt";
    }
}
