src/test/deca/syntax/invalid/synt/WhileErreur.deca
// Description:
//    erreur syntax de la boucle while
//
// Resultats:
//    missing '{' at 'print'
// 
// Historique:
//    cree le 01/01/2022

{
    while(1)
        print("no");
}